<resources>
    <string name="app_name">Shop</string>

    /* LOGIN AND REGISTER FORMS */
    <string name="tvLoginText">Sign in</string>
    <string name="tvRegisterText">Sign up</string>
    <string name="tvLoginNoAccount">Don\'t have an account?</string>
    <string name="etUserNameHint">User Name</string>
    <string name="etPasswordHint">Password</string>
    <string name="etPasswordConfirmationHint">Confirm password</string>
    <string name="etEmailHint">Email address</string>
    <string name="btnLoginText">Log in</string>
    <string name="btnRegisterText">Create account</string>
    <string name="btnCreateAccText">Join us!</string>

    /* MAIN MENU FORM */
    <string name="tvLoggedUser">Logged in as: </string>
    <string name="btnShop">Shop</string>
    <string name="btnWarehouse">Warehouse</string>
    <string name="btnAdminPanel">Admin Panel</string>

</resources>
