<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">
    <LinearLayout
        android:id="@+id/llLoginLayout_activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorBackground"
        android:padding="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorMainText"
            android:padding="30dp"
            android:text="@string/tvLoginText"/>
        <EditText
            android:id="@+id/etUserName_activity_login"
            android:hint="@string/etUserNameHint"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorMainText"
            android:textColorHint="@color/colorMainHint"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPassword_activity_login"
            android:hint="@string/etPasswordHint"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorMainText"
            android:textColorHint="@color/colorMainHint"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLogin_activity_login"
                android:text="@string/btnLoginText"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorMainText"
            android:padding="30dp"
            android:text="@string/tvLoginNoAccount"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCreateAcc_activity_login"
                android:text="@string/btnCreateAccText"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>