<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llRegisterLayout_activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorBackground"
        android:padding="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorMainText"
            android:padding="30dp"
            android:text="@string/tvRegisterText"/>
        <EditText
            android:id="@+id/etUserName_activity_register"
            android:hint="@string/etUserNameHint"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorMainText"
            android:textColorHint="@color/colorMainHint"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
<!--        <EditText-->
<!--            android:id="@+id/etEmail_activity_register"-->
<!--            android:hint="@string/etEmailHint"-->
<!--            android:maxLines="1"-->
<!--            android:lines="1"-->
<!--            android:singleLine="true"-->
<!--            android:textColor="@color/colorMainText"-->
<!--            android:textColorHint="@color/colorMainHint"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_margin="10dp"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->
        <EditText
            android:id="@+id/etPassword_activity_register"
            android:hint="@string/etPasswordHint"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorMainText"
            android:textColorHint="@color/colorMainHint"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPasswordConfirmation_activity_register"
            android:hint="@string/etPasswordConfirmationHint"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorMainText"
            android:textColorHint="@color/colorMainHint"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRegister_activity_register"
                android:text="@string/btnRegisterText"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>